consul-service-mesh/order/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  selector:
    app: order
  ports:
    - name: http
      port: 80
      targetPort: 8080
