consul-service-mesh/order/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order
  labels:
    app: order
spec:
  parentRefs:
    - name: api-gateway
      namespace: consul
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/order
      backendRefs:
        - name: order
          port: 80
